# file_search_engine_console

./: CMakeLists.txt  README.md
include/: json_parser.h  search_drive.h
src/: json_parser.cpp  main.cpp  search_drive.cpp
